fix: flex gap

--- a/packages/carousel/src/carousel.module.scss
+++ b/packages/carousel/src/carousel.module.scss
@@ -28,7 +28,6 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  gap: 12px;
   opacity: 1;
   animation: slideup 0.35s ease-in-out;
 }
@@ -44,6 +43,9 @@
   box-shadow: 0 0 4px #0009;
   opacity: 0.85;
   transition: transform 0.2s ease-in-out;
+  &:not(:last-child) {
+    margin-right: 12px;
+  }
   &:focus,
   &:hover {
     cursor: pointer;
